ecmascript/parser/tests/typescript-errors/custom/const-enum-2/input.ts.stderr
error: Expected Comma, got Some(Word(c))
 --> $DIR/tests/typescript-errors/custom/const-enum-2/input.ts:3:9
  |
3 |     b = a - (100 * Math.floor(Math.random() % 8))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

